<resources>
    <string name="app_name">HastraVani</string>
    <string name="signup">Daftar disini</string>
    <string name="login">Masuk</string>
    <string name="message_welcome_page">Kami akan membantumu menerjemahkan bahasa isyarat, kamu tidak akan kesulitan dalam memahami bahasa isyarat</string>
    <string name="title_welcome_page">Menerjemahkan bahasa isyarat</string>
    <string name="title_signup_page">Lengkapi data dirimu di bawah ini ya</string>
    <string name="email">Email:</string>
    <string name="password">Password:</string>
    <string name="message_login_page">Masukkan dulu datamu ya</string>
    <string name="title_login_page">Sudah siap untuk upgrade skill?</string>
    <string name="name">Nama</string>
    <string name="message_main_page">Selamat Belajar di Dicoding.</string>
    <string name="greeting">Halo %1$s,</string>
    <string name="logout">Keluar</string>
    <string name="Skip">Lewati</string>
    <string name="dont_have_account">Belum Punya Akun?</string>
    <string name="title_sing_in">Sign In</string>
    <string name="Email">Email:</string>
    <string name="Password">Password:</string>
    <string name="enter_email">Masukkan Email</string>
    <string name="enter_password">Masukkan Password</string>
    <string name="forgot_password">Lupa Password?</string>
    <string name="or_login_with">Atau Masuk Melalui</string>
    <string name="login_with_google">Masuk Dengan Google</string>
    <string name="register_account">Daftar Akun</string>
    <string name="full_name">Nama Lengkap:</string>
    <string name="enter_full_name">Masukkan Nama Lengkap</string>
    <string name="no_telp">Nomor Telepon:</string>
    <string name="enter_no_telp">Masukkan Nomor Telepon:</string>
    <string name="SignUp">Daftar</string>
    <string name="TnC">Syarat dan Ketentuan</string>
    <string name="Agree">Saya Menyetujui</string>
    <string name="title_forgot_password">Lupa Password</string>
    <string name="send">Kirim</string>
    <string name="email_or_no_telp">Email atau Nomor Telepon:</string>
    <string name="enter_email_or_no_telp">Masukkan Email atau Nomor Telepon:</string>
    <string name="new_password">Password Baru:</string>
    <string name="confirm_password">Konfirmasi Password:</string>
    <string name="enter_new_password">Masukkan Password Baru</string>
    <string name="enter_confirm_password">Masukkan Konfirmasi Password</string>
    <string name="save">Simpan</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="error_email">Email Anda Tidak Valid</string>
    <string name="error_password">Password tidak boleh kurang dari 8 karakter</string>
    <string name="account_created_message">Registrasi akun dengan %1$s akun berhasil. Yuk, login dan belajar coding.</string>
    <string name="account_failed_message">Registrasi Akun Anda Gagal</string>
    <string name="account_login_success">Anda berhasil login</string>
    <string name="next">Selanjutnya</string>
    <string name="yeah">Hore!</string>
    <string name="nay">Oh Tidak</string>
    <string name="select_image">Ambil Gambar Dari Galeri</string>
    <string name="upload_story">Unggah Cerita</string>
    <string name="take_picture">Ambil Gambar Dari Kamera</string>
    <string name="upload_not_valid">Anda belum memilih gambar atau mengisi deskripsi</string>
    <string name="upload_success">Anda berhasil mengunggah cerita</string>
    <string name="upload_failed">Gagal mengunggah cerita</string>
    <string name="syarat_ketentuan"><![CDATA[Syarat & Ketentuan]]></string>
</resources>